--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
   <div class="main__article-list article-list section-main">
     {% for post in site.posts %}
-      <article class="article-list__teaser teaser">
+      <article class="article-list__teaser teaser {% if post.image %}teaser--with-image{% endif %}">
         {% if post.image %}
         <a href="{{ post.url | prepend: site.baseurl }}">
           <img class="teaser__image" src="{{ post.image | prepend: site.baseurl }}">
