Add latest magazine description

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@ layout: default
     {% endfor %}
   </div>
   <div class="sidebar">
-    {% include magazine.html %}
+    <div class="sidebar__new-magazine teaser teaser--magazine">
+      {% include magazine.html %}
+    </div>
   </div>
 
 </div>
